manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
