manifests/base/svc_a.yaml
apiVersion: v1
kind: Service
metadata:
  name: appa

spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
