manifests/base/svc_c.yaml
sapiVersion: v1
kind: Service
metadata:
  name: appc

spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
