manifests/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: app 
  labels:
    zone: low
spec:
  to:
    kind: Service
    name: app
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
