manifests/base/route_a.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: appa
  labels:
    zone: zonea
spec:
  to:
    kind: Service
    name: app
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
