manifests/base/route_b.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: appb
  labels:
    zone: zoneb
spec:
  to:
    kind: Service
    name: appb
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
